# haskell-tutorial-bob-2020

./: IntroSpickzettel.hs  README.md  project.cabal
dist-newstyle/cache/: config  source-hashes
src/: IntroMachMit.hs  MachMit.hs  MachMit_women_in_tech.hs  Spickzettel.hs  Spickzettel_women_in_tech.hs
src/old/: Map.hs
vscode-folder/dist-newstyle/cache/: compiler  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
vscode-folder/src/: MachMit.hs  Spickzettel.hs
