name:                project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/active-group/haskell-ide-docker
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable my-project
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MachMit_women_in_tech, Spickzettel_women_in_tech, MachMit, Spickzettel, Map
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
